@@ -201,7 +201,7 @@ public class SimpleAdvacedSampleCompositionBean {
 				files.put("isImage", file.isImage());
 //				files.put("ExternalURI", file.getDomainFile()
 //						.getUriExternal().toString());
-				files.put("ExternalURI", new Boolean(file.getDomainFile().getUriExternal()).toString());
+				files.put("ExternalURI", Boolean.valueOf(file.getDomainFile().getUriExternal()).toString());
 				files.put("Title", file.getDomainFile().getTitle());
 
 				files.put("URI", file.getDomainFile().getUri());
@@ -341,7 +341,7 @@ public class SimpleAdvacedSampleCompositionBean {
 				files.put("isImage", file.isImage());
 //				files.put("ExternalURI", file.getDomainFile()
 //						.getUriExternal().toString());
-				files.put("ExternalURI", new Boolean(file.getDomainFile().getUriExternal()).toString());
+				files.put("ExternalURI", Boolean.valueOf(file.getDomainFile().getUriExternal()).toString());
 				files.put("Title", file.getDomainFile()
 						.getTitle());
 
